# WinRehome

./: AGENTS.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd.yaml
docs/: architecture.md  release-v0.1.0-beta.1.md  release-v0.1.0-beta.2.md  release-v0.1.0.md
src/: app.rs  archive.rs  config.rs  main.rs  models.rs  plan.rs
