[package]
name = "winrehome"
version = "0.1.0-beta.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
crc32fast = "1.5"
eframe = { version = "0.32", default-features = true }
egui = "0.32"
flate2 = "1.1"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
winreg = "0.55"
